tests/NormalTests/paczka1/fuzzy1/21672814.err
Error in line 3: 7PK8qOwrfW A88 35,9
Error in line 4: no6TXzPx8 A88 30,6
Error in line 9: no6TXzPx8 A739 45,5
Error in line 19: HbtZVSFd5 A58 25,9
Error in line 17: ea15bk A58 54,5
Error in line 27: no6TXzPx8 S122 76,9
Error in line 32: HbtZVSFd5 A58 54,6
